CMTYAEM-2038 Download component file name truncation issue fixed

--- a/ui.frontend/src/main/webpack/components/download/scss/styles/_default.scss
+++ b/ui.frontend/src/main/webpack/components/download/scss/styles/_default.scss
@@ -6,7 +6,7 @@
     margin-bottom: 8px;
 
     &__title {
-        max-width: 90%;
+        max-width: 100%;
         margin: 0;
     }
 
